--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  font-size: 18px;
-  @screen sm {
+/*html {*/
+/*  font-size: 18px;*/
+/*  @screen sm {*/
+/*    font-size: 16px;*/
+/*  }*/
+/*}*/
+
+/* 针对触控设备应用样式 */
+@media (hover: none) and (pointer: coarse) {
+  html {
+    font-size: 18px;
+  }
+}
+
+/* 针对非触控设备应用样式 */
+@media (hover: hover) and (pointer: fine) {
+  html {
     font-size: 16px;
   }
 }
