代码强制换行（临时解决方案）

--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -29,7 +29,7 @@ p {
 
 /*code 相关样式 */
 .article-content code {
-  @apply bg-content2 rounded-lg text-content2-foreground text-sm p-0.5 font-mono
+  @apply bg-content2 rounded-lg text-default-500 text-sm p-0.5 font-mono whitespace-pre-wrap
 }
 
 /*code 相关样式 */
