自动隐藏工具栏

--- a/src/App.css
+++ b/src/App.css
@@ -67,10 +67,9 @@ body {
     padding-top: calc(env(safe-area-inset-top) + 8px) !important;
   }
 
-  .article-view-content {
-    padding-top: calc(env(safe-area-inset-top) + 80px) !important;
-  }
-
+  /*.article-view-content {*/
+  /*  padding-top: calc(env(safe-area-inset-top) + 80px) !important;*/
+  /*}*/
   .settings-modal {
     margin-bottom: calc(env(safe-area-inset-bottom) + 8px) !important;
   }
