--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --shadow-custom: 0 0 5px 0 rgba(0, 0, 0, 0.02),
+    0 2px 10px 0 rgba(0, 0, 0, 0.07), 0 0 1px 0 rgba(0, 0, 0, 0.3);
+  }
+
+  .dark {
+    --shadow-custom: 0 0 5px 0 rgba(0, 0, 0, 0.05),
+    0 2px 10px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 hsla(0, 0%, 100%, 0.15),
+    0 0 1px 0 rgba(255, 255, 255, 0.7);
+  }
+}
+
