--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -23,24 +23,18 @@ p {
   @apply border-b-[1px] border-dotted border-primary no-underline    transition-colors text-primary
 }
 
-/*code 相关样式 - 表格 */
+/*表格*/
 .article-content td {
   @apply text-content2-foreground text-sm
 }
 
 /*code 相关样式 */
 .article-content code {
-  @apply rounded-lg text-sm p-0.5 font-mono whitespace-pre-wrap
+  @apply whitespace-pre-wrap
 }
 
-/*code 相关样式 */
 .article-content figure {
   @apply my-4
-}
-
-/*code 相关样式 */
-.article-content pre {
-  @apply rounded-lg overflow-auto p-3 leading-tight
 }
 
 iframe {
