--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -5,7 +5,7 @@
 }
 
 .article-content *:not(.plyr__tooltip) {
-  @apply max-w-full max-h-full;
+  @apply max-w-full;
 }
 
 .article-content li,
@@ -20,7 +20,7 @@ p {
 
 /* 文章内容链接样式 */
 .article-content a {
-  @apply border-b-[1px] border-dotted border-primary no-underline    transition-colors text-primary
+  @apply border-b-[1px] border-dotted border-primary no-underline transition-colors text-primary
 }
 
 /*表格*/
