修复code将文章内容撑大问题

--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -30,7 +30,7 @@ p {
 
 /*code 相关样式 */
 .article-content code {
-  @apply whitespace-pre md:whitespace-pre-wrap
+  @apply whitespace-pre-wrap
 }
 
 
