--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -30,7 +30,7 @@ p {
 
 /*code 相关样式 */
 .article-content code:not(pre code) {
-  @apply whitespace-pre-wrap
+  @apply whitespace-pre-wrap before:content-none after:content-none border font-medium font-mono dark:text-default-500 rounded text-default-600 bg-default-100 dark:bg-default-100/80 px-1.5 py-0.5
 }
 
 .article-content pre code {
