--- a/src/components/ArticleView/ArticleView.css
+++ b/src/components/ArticleView/ArticleView.css
@@ -98,7 +98,7 @@ div.force-dark-code-theme .shiki span {
 
 /*image gallery*/
 .PhotoView-Slider__BannerWrap {
-  @apply pt-safe-or-4 pl-safe-or-4 h-auto
+  @apply pt-safe-or-4 px-safe-or-4 h-auto flex-row-reverse
 }
 
 /*图片计数显示*/
