--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
   :root {
     --shadow-custom: 0 0 5px 0 rgba(0, 0, 0, 0.02),
     0 2px 10px 0 rgba(0, 0, 0, 0.07), 0 0 1px 0 rgba(0, 0, 0, 0.3);
+    --shadow-custom-button: 0 1px 2px 0 rgba(0, 0, 0, 0.15), inset 0 1px 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 1px 0 rgba(255, 255, 255, 0.1);
+    --shadow-custom-inner: inset 0 0 2px 0 rgba(0, 0, 0, 0.05), inset 0 0 4px 0 rgba(0, 0, 0, 0.05), inset 0 0 2px 0 rgba(0, 0, 0, 0.05);
   }
 
   .dark {
